[package]
name = "raydium-test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dotenv = "0.15.0"
# raydium_amm = { git = "https://github.com/protecc-labs/raydium-amm", branch = "master", default = "program" }
solana-account-decoder = "1.18.14"
solana-client = "1.18.14"
solana-program = "1.18.14"
solana-sdk = "1.18.14"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
